frontend/public/css/style.css
#icon  > .fa {
    left: 60%;
    color: #000;
    font-size: 24px;
    position: relative;
    top:3px;
}

.board .col-md-4 {
    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
    margin-top: 40px;
    margin-bottom: 50px;
    padding-bottom: 20px;
}

.board .btn-success {
    margin-top: 10px;
    margin-bottom: 10px;
    background: #4CAF50;
}

.flash-error {
    padding: 10px 10px;
    background-color: crimson;
    color: white;
    font-weight: bold;
    font-size: 14px;
    border-radius: 5px;
}

.flash-success {
    padding: 10px;
    background-color: #4CAF50;
    color: white;
    font-weight: bold;
    font-size: 14px;
    max-width: 40%;
    margin: 0 auto;
    text-align: center;
}

.navbar {
    height: 80px;
    background-color: white;
}

.navbar-brand {
    padding: 30px 15px;
    font-size: 28px;
    font-weight: bold;
}

.navbar-nav,
.navbar-nav>li>a {
    font-weight: bold;
    padding-top: 0px;
    padding-left: 25px;
}

.not-found {
    font-size: 18em;
    color: crimson;
}

.btn-primary {
    width: 100%;
}

.form-group label {
    margin-top: 20px;
}

.navbar .glyphicon-th {
    font-size: 30px;
    margin-top: 20px;
}

.navbar hr {
    margin-bottom: 0;
    margin-top: 10px;
}

.custom-menu {
    min-height: 350px;
    overflow: auto;
    width: 300px;
    position: absolute;
    border: 1px solid #bfbfbf;
    position: absolute;
    right: 20px;
    top: 0px;
    box-shadow: 0px 0px 5px 5px #f2f2f2;
    background-color: white;
}

.custom-arrow {
    background-color: white;
    width: 15px;
    height: 15px;
    border: 1px solid #bfbfbf;
    position: absolute;
    top: -7px;
    right: 44px;
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    transform: rotate(45deg);
}

.hide-arrow {
    width: 30px;
    height: 30px;
    position: absolute;
    background-color: white;
    right: 10px;
    top: 0px;
    z-index: 2;
}

.custom-menu-content {
    position: relative;
    top: 70px;
    left: 35px;
    z-index: 3;
}

.custom-menu-item {
    display: inline-block;
    width: 32%;
    max-height: 70px;
    padding: 5px;
    text-align: center;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    margin-top: 20px;
}

.submit-btn {
    background: #5BC0DE;
    color: #ffffff;
    font-size: 18px;
}

.submit-btn:hover {
    background: #ffffff;
    border: 1px solid #5BC0DE;
    color: #000000;
    font-size: 18px;
}

.btn-group {
    width: 100%;
}

.dropdown-toggle {
    width: 100%;
}

.dropdown-menu {
    width: 100%;
    height: 200px;
    overflow-y: auto;
}

.btn-group img {
    margin-right: 10px;
    margin-left: 10px;
    margin-bottom: 10px;
    width: 30px;
    height: 50px;
}

.dropdown-toggle {
    padding-right: 50px;
}

.dropdown-toggle .glyphicon {
    margin-left: 20px;
    margin-right: -40px;
}

.menu-options {
    border-bottom: 1px solid darkgray;
}

.font-options {
  border-bottom: 1px solid darkgray;
  padding: 9px;
}

.dropdown-menu>li:hover {
    background: #f1f9fd;
    cursor: pointer;
}

.custom-icon img {
    width: 60%;
}

textarea {
    resize: vertical;
}

#footer {
    position: fixed;
    text-align: center;
    width: 100%;
    padding: 10px;
    bottom: 0px;
    border-top: 1px solid #bfbfbf;
    background-color: #f9f9f9;
}

.options {
    margin-bottom: 20px;
}

.guide {
    padding: 20px 0px;
}

.guide_img {
    max-width: 100%;
    border: 0.1em solid;
}

.user-defined {
    width: 10%;
    height: 20%;
    margin-left: 10px;
}

ul,
ol {
    padding: 0;
}

#error {
    text-align: center;
    color: red;
    margin: 10px;
    display: none;
}

@media screen and (max-width: 376px){
    #icon > .fa {
        left: 10% !important;
    }
}

@media screen and (max-width: 1200px){
    #icon  > .fa {
        left: 30%;
    }
}

@media screen and (max-width: 1570px){
    #icon  > .fa {
        left: 40%;
    }
}

@media screen and (max-width: 780px) {
    .navbar-header {
        margin-top: 5px;
        margin-left: 5px !important;
    }
    .navbar .container {
        display: flex;
    }
    .navbar-right {
        position: absolute;
        right: 50px !important;
    }
    .custom-menu-content {
        top: 20px;
    }
}

input[type="radio"] {
    vertical-align: middle;
    margin: 0 auto;
}

.preview-image{
    height: 250px;
    width: 180px;
    margin-left: 80px;
    background-size: cover;
    padding: 140px 0 0 5px;
    text-align: center;
    margin-top: 20px;
}

.preview-image-li{
    list-style: none;
    color: white;
    font-size: 15px;
}

#preview-btn{
    font-size: 18px;   
}

